// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Windows uppercase folders error 1`] = `
Object {
  "context": Object {
    "sourceMessage": "Error: RelayParser: Encountered duplicated definitions for one or more documents: each document must have a unique name. Duplicated documents:

Warning: Windows users may be able to fix this error by renaming all directories to lowercase
in the file path and also by installing package node-win-env using npm install -g node-win-env",
  },
  "filePath": "test.js",
  "id": "85902",
  "location": Object {
    "start": Object {
      "column": 10,
      "line": 5,
    },
  },
}
`;

exports[`totally vague one 1`] = `
Object {
  "context": Object {
    "sourceMessage": "foo bar",
  },
  "filePath": "test.js",
  "id": "85901",
  "location": Object {
    "start": Object {
      "column": 10,
      "line": 5,
    },
  },
}
`;

exports[`vague one 1`] = `
Object {
  "context": Object {
    "message": "- Unknown field 'fdnjkgd' on type 'SiteSiteMetadata'.",
  },
  "filePath": "test.js",
  "id": "85907",
  "location": Object {
    "start": Object {
      "column": 10,
      "line": 5,
    },
  },
}
`;
